--- a/index.html
+++ b/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Fylo data storage component</title>
+  <link rel="stylesheet" href="css/stylesheet.css">
+  <title>Data Storage</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+    <img class="bg-desktop-image "src="images/bg-desktop.png" alt="desktop background image">
 
-  You’ve used 815 GB of your storage
+  <div class="boxes">
+    <div class="left-box">
+      <img class="fylo-image" src="images/logo.svg" alt="fylo logo">
+      <br>
+      <img class="icons" src="images/icon-document.svg" alt="doc icon">
+      <img class="icons" src="images/icon-folder.svg" alt="folder icon">
+      <img class="icons" src="images/icon-upload.svg" alt="upload icon">
+    </div>
 
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div class="right-box">
+      <p class="mem-status-text">You've used <strong>815 GB</strong> of your storage</p>
+      <div class="progress-bar-background">
+        <div class="progress-bar">
+          <div class="progress-bar-dot"></div>
+        </div>
+      </div>
+      <p class="zero-gb-text"><span>0</span> GB</p>
+      <p class="max-range-text"><span>1000</span> GB</p>
+    </div>
   </div>
+
+
 </body>
+
 </html>
