adding unfinished message bubble elements for memory remaining bubble

--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
       </div>
       <p class="zero-gb-text"><span>0</span> GB</p>
       <p class="max-range-text"><span>1000</span> GB</p>
+      <!-- <p class="bubble speech"><span>185</span> GB LEFT</p> -->
     </div>
+
+
   </div>
+
 
 
 </body>
